--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- responsive css link -->
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/meanmenu.css">
-   <title> de</title>
+   <title>Ecommerce site</title>
 </head>
 
 <body>
